--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "@heroicons/react": "^2.0.13",
     "axios": "^0.27.2",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
