--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.13",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
